project1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT ID LC DefList RC
   13                | STRUCT ID

   14 VarDec: ID
   15       | VarDec LB INT RB
   16       | UNKNOW

   17 FunDec: ID LP VarList RP
   18       | ID LP RP
   19       | ID LP error
   20       | ID LP VarList error

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | Exp error
   34     | RETURN Exp error

   35 DefList: Def DefList
   36        | %empty

   37 Def: Specifier DecList SEMI
   38    | Specifier DecList error

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGN Exp

   43 Exp: Exp ASSIGN Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp LT Exp
   47    | Exp LE Exp
   48    | Exp GT Exp
   49    | Exp GE Exp
   50    | Exp NE Exp
   51    | Exp EQ Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp MUL Exp
   55    | Exp DIV Exp
   56    | Exp UNKNOW Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | CHAR
   68    | ID LP Args error
   69    | ID LP error
   70    | UNKNOW

   71 Args: Exp COMMA Args
   72     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 20 33 34 38 68 69
LP (258) 17 18 19 20 30 31 32 57 60 61 68 69
RP (259) 17 18 30 31 32 57 60 61
LC (260) 12 24
RC (261) 12 24
LB (262) 15 62
RB (263) 15 62
COMMA (264) 9 21 40 71
DOT (265) 63
SEMI (266) 4 5 27 29 37
LT (267) 46
LE (268) 47
GT (269) 48
GE (270) 49
NE (271) 50
EQ (272) 51
PLUS (273) 52
MINUS (274) 53 58
MUL (275) 54
DIV (276) 55
AND (277) 44
OR (278) 45
NOT (279) 59
ASSIGN (280) 42 43
STRUCT (281) 12 13
ID (282) 12 13 14 17 18 19 20 60 61 63 64 68 69
CHAR (283) 67
INT (284) 15 65
FLOAT (285) 66
WHILE (286) 32
TYPE (287) 10
IF (288) 30 31
ELSE (289) 31
RETURN (290) 29 34
UNKNOW (291) 16 56 70
LOWER_ELSE (292)
UMINUS (293)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Program (40)
    on left: 1, on right: 0
ExtDefList (41)
    on left: 2 3, on right: 1 2
ExtDef (42)
    on left: 4 5 6 7, on right: 2
ExtDecList (43)
    on left: 8 9, on right: 4 7 9
Specifier (44)
    on left: 10 11, on right: 4 5 6 7 23 37 38
StructSpecifier (45)
    on left: 12 13, on right: 11
VarDec (46)
    on left: 14 15 16, on right: 8 9 15 23 41 42
FunDec (47)
    on left: 17 18 19 20, on right: 6
VarList (48)
    on left: 21 22, on right: 17 20 21
ParamDec (49)
    on left: 23, on right: 21 22
CompSt (50)
    on left: 24, on right: 6 28
StmtList (51)
    on left: 25 26, on right: 24 25
Stmt (52)
    on left: 27 28 29 30 31 32 33 34, on right: 25 30 31 32
DefList (53)
    on left: 35 36, on right: 12 24 35
Def (54)
    on left: 37 38, on right: 35
DecList (55)
    on left: 39 40, on right: 37 38 40
Dec (56)
    on left: 41 42, on right: 39 40
Exp (57)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 69 70, on right: 27 29 30 31 32 33 34 42
    43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 62 63 71 72
Args (58)
    on left: 71 72, on right: 60 68 71


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 StructSpecifier: STRUCT . ID LC DefList RC
   13                | STRUCT . ID

    ID  shift, and go to state 8


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error

    SEMI    shift, and go to state 11
    ID      shift, and go to state 12
    UNKNOW  shift, and go to state 13

    ExtDecList  go to state 14
    VarDec      go to state 15
    FunDec      go to state 16


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   12 StructSpecifier: STRUCT ID . LC DefList RC
   13                | STRUCT ID .

    LC  shift, and go to state 17

    $default  reduce using rule 13 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 11

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 12

   14 VarDec: ID .
   17 FunDec: ID . LP VarList RP
   18       | ID . LP RP
   19       | ID . LP error
   20       | ID . LP VarList error

    LP  shift, and go to state 18

    $default  reduce using rule 14 (VarDec)


State 13

   16 VarDec: UNKNOW .

    $default  reduce using rule 16 (VarDec)


State 14

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error

    error  shift, and go to state 19
    SEMI   shift, and go to state 20


State 15

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   15 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 21
    COMMA  shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 16

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 17

   12 StructSpecifier: STRUCT ID LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 26
    Def              go to state 27


State 18

   17 FunDec: ID LP . VarList RP
   18       | ID LP . RP
   19       | ID LP . error
   20       | ID LP . VarList error

    error   shift, and go to state 28
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 19

    7 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 7 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

   15 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 33


State 22

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID      shift, and go to state 34
    UNKNOW  shift, and go to state 13

    ExtDecList  go to state 35
    VarDec      go to state 15


State 23

   24 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 27


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   37 Def: Specifier . DecList SEMI
   38    | Specifier . DecList error

    ID      shift, and go to state 34
    UNKNOW  shift, and go to state 13

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


State 26

   12 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 40


State 27

   35 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 27


State 28

   19 FunDec: ID LP error .

    $default  reduce using rule 19 (FunDec)


State 29

   18 FunDec: ID LP RP .

    $default  reduce using rule 18 (FunDec)


State 30

   23 ParamDec: Specifier . VarDec

    ID      shift, and go to state 34
    UNKNOW  shift, and go to state 13

    VarDec  go to state 42


State 31

   17 FunDec: ID LP VarList . RP
   20       | ID LP VarList . error

    error  shift, and go to state 43
    RP     shift, and go to state 44


State 32

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 22 (VarList)


State 33

   15 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


State 34

   14 VarDec: ID .

    $default  reduce using rule 14 (VarDec)


State 35

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 36

   24 CompSt: LC DefList . StmtList RC

    LP      shift, and go to state 47
    LC      shift, and go to state 23
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    WHILE   shift, and go to state 54
    IF      shift, and go to state 55
    RETURN  shift, and go to state 56
    UNKNOW  shift, and go to state 57

    $default  reduce using rule 26 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 59
    Stmt      go to state 60
    Exp       go to state 61


State 37

   15 VarDec: VarDec . LB INT RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGN Exp

    LB      shift, and go to state 21
    ASSIGN  shift, and go to state 62

    $default  reduce using rule 41 (Dec)


State 38

   37 Def: Specifier DecList . SEMI
   38    | Specifier DecList . error

    error  shift, and go to state 63
    SEMI   shift, and go to state 64


State 39

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 65

    $default  reduce using rule 39 (DecList)


State 40

   12 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 41

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 42

   15 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 21

    $default  reduce using rule 23 (ParamDec)


State 43

   20 FunDec: ID LP VarList error .

    $default  reduce using rule 20 (FunDec)


State 44

   17 FunDec: ID LP VarList RP .

    $default  reduce using rule 17 (FunDec)


State 45

   21 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 66
    ParamDec         go to state 32


State 46

   15 VarDec: VarDec LB INT RB .

    $default  reduce using rule 15 (VarDec)


State 47

   57 Exp: LP . Exp RP

    LP      shift, and go to state 47
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    UNKNOW  shift, and go to state 57

    Exp  go to state 67


State 48

   58 Exp: MINUS . Exp

    LP      shift, and go to state 47
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    UNKNOW  shift, and go to state 57

    Exp  go to state 68


State 49

   59 Exp: NOT . Exp

    LP      shift, and go to state 47
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    UNKNOW  shift, and go to state 57

    Exp  go to state 69


State 50

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .
   68    | ID . LP Args error
   69    | ID . LP error

    LP  shift, and go to state 70

    $default  reduce using rule 64 (Exp)


State 51

   67 Exp: CHAR .

    $default  reduce using rule 67 (Exp)


State 52

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


State 53

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


State 54

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 71


State 55

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 72


State 56

   29 Stmt: RETURN . Exp SEMI
   34     | RETURN . Exp error

    LP      shift, and go to state 47
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    UNKNOW  shift, and go to state 57

    Exp  go to state 73


State 57

   70 Exp: UNKNOW .

    $default  reduce using rule 70 (Exp)


State 58

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 59

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 74


State 60

   25 StmtList: Stmt . StmtList

    LP      shift, and go to state 47
    LC      shift, and go to state 23
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    WHILE   shift, and go to state 54
    IF      shift, and go to state 55
    RETURN  shift, and go to state 56
    UNKNOW  shift, and go to state 57

    $default  reduce using rule 26 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 75
    Stmt      go to state 60
    Exp       go to state 61


State 61

   27 Stmt: Exp . SEMI
   33     | Exp . error
   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   56    | Exp . UNKNOW Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    error   shift, and go to state 76
    LB      shift, and go to state 77
    DOT     shift, and go to state 78
    SEMI    shift, and go to state 79
    LT      shift, and go to state 80
    LE      shift, and go to state 81
    GT      shift, and go to state 82
    GE      shift, and go to state 83
    NE      shift, and go to state 84
    EQ      shift, and go to state 85
    PLUS    shift, and go to state 86
    MINUS   shift, and go to state 87
    MUL     shift, and go to state 88
    DIV     shift, and go to state 89
    AND     shift, and go to state 90
    OR      shift, and go to state 91
    ASSIGN  shift, and go to state 92
    UNKNOW  shift, and go to state 93


State 62

   42 Dec: VarDec ASSIGN . Exp

    LP      shift, and go to state 47
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    UNKNOW  shift, and go to state 57

    Exp  go to state 94


State 63

   38 Def: Specifier DecList error .

    $default  reduce using rule 38 (Def)


State 64

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


State 65

   40 DecList: Dec COMMA . DecList

    ID      shift, and go to state 34
    UNKNOW  shift, and go to state 13

    VarDec   go to state 37
    DecList  go to state 95
    Dec      go to state 39


State 66

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 67

   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   56    | Exp . UNKNOW Exp
   57    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    RP      shift, and go to state 96
    LB      shift, and go to state 77
    DOT     shift, and go to state 78
    LT      shift, and go to state 80
    LE      shift, and go to state 81
    GT      shift, and go to state 82
    GE      shift, and go to state 83
    NE      shift, and go to state 84
    EQ      shift, and go to state 85
    PLUS    shift, and go to state 86
    MINUS   shift, and go to state 87
    MUL     shift, and go to state 88
    DIV     shift, and go to state 89
    AND     shift, and go to state 90
    OR      shift, and go to state 91
    ASSIGN  shift, and go to state 92
    UNKNOW  shift, and go to state 93


State 68

   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   56    | Exp . UNKNOW Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    LB      shift, and go to state 77
    DOT     shift, and go to state 78
    UNKNOW  shift, and go to state 93

    $default  reduce using rule 58 (Exp)


State 69

   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   56    | Exp . UNKNOW Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID

    LB      shift, and go to state 77
    DOT     shift, and go to state 78
    UNKNOW  shift, and go to state 93

    $default  reduce using rule 59 (Exp)


State 70

   60 Exp: ID LP . Args RP
   61    | ID LP . RP
   68    | ID LP . Args error
   69    | ID LP . error

    error   shift, and go to state 97
    LP      shift, and go to state 47
    RP      shift, and go to state 98
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    UNKNOW  shift, and go to state 57

    Exp   go to state 99
    Args  go to state 100


State 71

   32 Stmt: WHILE LP . Exp RP Stmt

    LP      shift, and go to state 47
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    UNKNOW  shift, and go to state 57

    Exp  go to state 101


State 72

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    LP      shift, and go to state 47
    MINUS   shift, and go to state 48
    NOT     shift, and go to state 49
    ID      shift, and go to state 50
    CHAR    shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    UNKNOW  shift, and go to state 57

    Exp  go to state 102


State 73
